fixed separator not displaying in light and dark mode

--- a/App/budgan/src/components/account-list/account-list.component.scss
+++ b/App/budgan/src/components/account-list/account-list.component.scss
@@ -4,7 +4,7 @@
   padding: 0;
 
   &__item {
-    border-bottom: 1px solid var(--mat-sys-outline-variant, rgba(0, 0, 0, 0.12));
+    border-bottom: 1px solid var(--mat-sys-outline-variant);
 
     &:last-child {
       border-bottom: none;
