--- a/App/budgan/src/components/journal-list/journal-list.component.scss
+++ b/App/budgan/src/components/journal-list/journal-list.component.scss
@@ -5,7 +5,7 @@
   padding: 0;
 
   &__item {
-    border-bottom: 1px solid var(--mat-sys-outline-variant, rgba(0, 0, 0, 0.12));
+    border-bottom: 1px solid var(--mat-sys-outline-variant);
 
     &:last-child {
       border-bottom: none;
@@ -35,7 +35,7 @@
 
   &__empty {
     padding: 1em;
-    color: var(--mat-sys-on-surface-variant, rgba(0, 0, 0, 0.6));
+    color: var(--mat-sys-on-surface-variant, inherit);
     font-style: italic;
   }
 }
